# trial-pgvector

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
input/: securememo_faq.csv
notebooks/: README.md
src/: README.md  app.py  chain.py
tests/: README.md
